Fixed nav spacing on mobile

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ a:focus {
     }
 
     .name{
-        padding-top: 10px;
+        padding-top: 5px;
         font-size: 1.2rem;
         text-align: center;
     }
